--- a/support/style.css
+++ b/support/style.css
@@ -129,3 +129,12 @@ section>p {
 	margin-top: 0;
 	margin-bottom: 0;
 }
+
+footer {
+	text-align: right;
+	font-size: .8em;
+}
+
+footer, footer a, footer a:visited, footer a:active {
+	color: #555;
+}
